--- a/src/todo.html
+++ b/src/todo.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/main.css">
     <script defer src="./scripts/todo.js"></script>
 
-    <title>Todo</title>
+    <title>Daily Items | </title>
 </head>
 <body>
     <section>
@@ -120,8 +120,8 @@
                 <div class="divider">
                     <hr>
                 </div>
-                <a href="/todo-items"> <i class="material-icons">list</i>Todo Items</a>
-                <a href="/goals"> <i class="material-icons">track_changes</i>Goals</a>
+                <a href="/todo-items"> <i class="material-icons">list</i>Daily Items</a>
+                <a href="/Goal-Management"> <i class="material-icons">track_changes</i>Goals</a>
             </div>
     
             <div class="bottom-nav-items">
