--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./styles/styles.css">
     <script defer type="text/javascript" src="js/materialize.min.js"></script>
     <script defer src="./scripts/main.js"></script>
-    <title>Goal Setter| Feel Overpowered!</title>
+    <title>RIZE | Feel Overpowered!</title>
 </head>
 <body>
     <!-- Body -->
@@ -23,7 +23,7 @@
                     <strong class="today">November 07 2022</strong>
                 </div>
                 <div class="welcome">
-                    <strong>Welcome back, Kwanele!</strong>
+                    <strong>Welcome back!</strong>
                 </div>
                 
             </div>
@@ -34,6 +34,8 @@
                 </div>
                 <div class="pending-tasks">
                     <p>Your Pending Goal Items:</p>
+                    <br> <br>
+                    <p>Coming Soon...</p>
                 </div>
             </div>
         </header>
@@ -47,7 +49,7 @@
             <div class="divider">
                 <hr>
             </div>
-            <a href="/todo-items"> <i class="material-icons">list</i>Todo Items</a>
+            <a href="/todo-items"> <i class="material-icons">list</i>Daily Items</a>
             <a href="/goals"> <i class="material-icons">track_changes</i>Goals</a>
         </div>
 
