--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,13 +44,13 @@
     <!-- sidenav -->
     <div class="side-nav z-depth-3">
         <div class="top-nav-items">
-            <a href="/"> <i class="material-icons">dashboard</i>Dashboard</a>
+            <a href="index.html"> <i class="material-icons">dashboard</i>Dashboard</a>
             <a href=""> <i class="material-icons">person</i>Profile</a>
             <div class="divider">
                 <hr>
             </div>
-            <a href="/todo-items"> <i class="material-icons">list</i>Daily Items</a>
-            <a href="/goals"> <i class="material-icons">track_changes</i>Goals</a>
+            <a href="todo.html"> <i class="material-icons">list</i>Daily Items</a>
+            <a href="goals.html"> <i class="material-icons">track_changes</i>Goals</a>
         </div>
 
         <div class="bottom-nav-items">
