--- a/frontend/public/todo.html
+++ b/frontend/public/todo.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/> -->
-    <link rel="stylesheet" href="./styles/main.css">
+    <link rel="stylesheet" href="./styles/todo.css">
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="./scripts/todo.js"></script>
 
     <title>Daily Items | </title>
@@ -17,18 +18,13 @@
         <div class="container">
             <div class="todo-list-container">
                 <i class="material-icons close-btn">close</i>
-                <form action="/todo-item" class="todo-form" method="post">
-                    <!-- <div class="message">
-                        <strong class="fail-message">
-                            Your request could not be completed. Please try again
-                        </strong>
-                    </div> -->
-
+                
+                <form class="todo-form" id="todo-submit">
                     <h1>Create Item</h1>
-                    <input type="text" placeholder="Title" name="todoTitle" class="todo-input">
-                    <input type="text" placeholder="Description" name="todoDesc" class="todo-input"> <span></span>
-                    <input type="date" name="dueDate" class="todo-input">
-                    <button type="submit" class="submit-todo">Add Item
+                    <input type="text" placeholder="Title" name="todoTitle" class="todo-input" id="todo-title">
+                    <input type="text" placeholder="Description" name="todoDesc" class="todo-input" id="todo-desc">
+                    <input type="date" name="dueDate" class="todo-input" id="todo-date">
+                    <button type="submit" class="submit-todo" >Add Item
                         <i class="material-icons">send</i>
                     </button>
                 </form>
@@ -94,34 +90,16 @@
         </div>
 
     </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         <!-- sidenav -->
         <div class="side-nav z-depth-3">
             <div class="top-nav-items">
-                <a href="/"> <i class="material-icons">dashboard</i>Dashboard</a>
+                <a href="index.html"> <i class="material-icons">dashboard</i>Dashboard</a>
                 <a href=""> <i class="material-icons">person</i>Profile</a>
                 <div class="divider">
                     <hr>
                 </div>
-                <a href="/todo-items"> <i class="material-icons">list</i>Daily Items</a>
-                <a href="/Goal-Management"> <i class="material-icons">track_changes</i>Goals</a>
+                <a href="todo.html"> <i class="material-icons">list</i>Daily Items</a>
+                <a href="goals.html"> <i class="material-icons">track_changes</i>Goals</a>
             </div>
     
             <div class="bottom-nav-items">
