--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+    <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="./styles/styles.css">
-    <script defer type="text/javascript" src="js/materialize.min.js"></script>
+    <script defer type="text/javascript" src="js/materialize.min.js"></script> -->
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="./scripts/main.js"></script>
     <title>RIZE | Feel Overpowered!</title>
 </head>
