saturday morning test

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
     <link rel="stylesheet" href="./styles/styles.css">
-    <script defer type="text/javascript" src="js/materialize.min.js"></script> -->
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script defer src="./scripts/main.js"></script>
     <title>RIZE | Feel Overpowered!</title>
@@ -46,7 +44,7 @@
     <!-- spans added to hide label on small screens -->
     <div class="side-nav z-depth-3">
       <div class="top-nav-items">
-        <a href="/">
+        <a href="index.html">
           <i class="material-icons">dashboard</i>
           <span>Dashboard</span>
         </a>
@@ -57,11 +55,11 @@
         <div class="divider">
           <hr />
         </div>
-        <a href="/todo-items">
+        <a href="todo.html">
           <i class="material-icons">list</i>
           <span>Daily Items</span>
         </a>
-        <a href="/goals">
+        <a href="goals.html">
           <i class="material-icons">track_changes</i>
           <span>Goals</span></a
         >
