add notifications icon for notifications, work on some media queries, basic css stuff. tested

--- a/frontend/public/todo.html
+++ b/frontend/public/todo.html
@@ -20,9 +20,12 @@
                 <i class="material-icons close-btn">close</i>
                 
                 <form class="todo-form" id="todo-submit">
-                    <h1>Create Item</h1>
+                    <h1 style="margin-bottom: 5rem;">Add a Project</h1>
+                    <label for="title"><strong>Project Title:</strong></label>
                     <input type="text" placeholder="Title" name="todoTitle" class="todo-input" id="todo-title">
+                    <label for="Description"><strong>Project Description:</strong></label>
                     <input type="text" placeholder="Description" name="todoDesc" class="todo-input" id="todo-desc">
+                    <label for="title"><strong>Project Due Date:</strong></label>
                     <input type="date" name="dueDate" class="todo-input" id="todo-date">
                     <button type="submit" class="submit-todo" >Add Item
                         <i class="material-icons">send</i>
@@ -33,7 +36,7 @@
 
         <div class="container">
             <div class="task-header">
-                <h1>Task Board</h1>
+                <h1>Project Board</h1>
                 <button class="create-btn">Create
                     <i class="material-icons right">arrow_drop_down</i>
                 </button>
