update profile page

--- a/frontend/public/profile.html
+++ b/frontend/public/profile.html
@@ -67,16 +67,17 @@
       </div>
       <a href="#" class="card">
         <h2>Notifications</h2>
-        <p>15</p>
+        <p class="notification-count">15</p>
       </a>
       <a href="todo.html" class="card">
         <h2>Pending Tasks</h2>
-        <p>10</p>
+        <p class="pending-task-count">10</p>
       </a>
       <a href="goals.html" class="card">
         <h2>Goals</h2>
-        <p>5</p>
+        <p class="goals-count">5</p>
       </a>
     </section>
+    <!-- placeholder profile icon by https://dryicons.com -->
   </body>
 </html>
