--- a/frontend/public/todo.html
+++ b/frontend/public/todo.html
@@ -17,8 +17,7 @@
 
         <div class="container">
             <div class="todo-list-container">
-                <i class="material-icons close-btn">close</i>
-                
+                <i class="material-icons close-btn">close</i>             
                 <form class="todo-form" id="todo-submit">
                     <h1 style="margin-bottom: 5rem;">Add a Project</h1>
                     <label for="title"><strong>Project Title:</strong></label>
@@ -31,6 +30,10 @@
                         <i class="material-icons">send</i>
                     </button>
                 </form>
+
+                <!-- <form class="delete-form">
+
+                </form> -->
             </div>
         </div>
 
@@ -66,6 +69,7 @@
             <div class="todo-table">
                 <div class="todo-table-header">
                     <div class="todo-table-header-title">
+                        <strong class="action">Action</strong>
                         <strong class="title">Title</strong>
                         <strong class="table-desc">Description</strong>
                     </div>
