--- a/frontend/public/todo.html
+++ b/frontend/public/todo.html
@@ -30,10 +30,6 @@
                         <i class="material-icons">send</i>
                     </button>
                 </form>
-
-                <!-- <form class="delete-form">
-
-                </form> -->
             </div>
         </div>
 
@@ -66,8 +62,8 @@
             </div>
 
             <hr class="container-divider">
-            <div class="todo-table">
-                <div class="todo-table-header">
+            <div class="todo-table" id="todo-table">
+                <!-- <div class="todo-table-header">
                     <div class="todo-table-header-title">
                         <strong class="action">Action</strong>
                         <strong class="title">Title</strong>
@@ -80,18 +76,14 @@
                         <strong>Due Date
                             <i class="material-icons">unfold_more</i>
                         </strong>
-                        <!-- <strong>Date Updated
-                            <i class="material-icons">unfold_more</i>
-                        </strong>
-                        <strong>In Progress
-                            <i class="material-icons">unfold_more</i>
-                        </strong> -->
                     </div>
-                </div>
+                </div> -->
             </div>
             <hr class="container-divider">
-            <div class="table-body-container">
 
+            <div class="table-body-container" id="table-body-container">
+                
+               
             </div>
 
         </div>
