--- a/frontend/public/edit.html
+++ b/frontend/public/edit.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
         <input type="text" placeholder="todo Title" id="title">
         <input type="text" placeholder="todo Description" id="desc">
         <input type="hidden" id="hidden-id">
-        <button type="submit">Submit</button>
+        <button class="edit-btn" type="submit">Submit</button>
     </form>
     <script src="./scripts/edit.js"></script>
     
