--- a/frontend/public/register.html
+++ b/frontend/public/register.html
@@ -4,13 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
     <link rel="stylesheet" href="./styles/register-login.css" />
     <script defer src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script defer src="./scripts/main.js"></script>
     <title>RIZE | Feel Overpowered!</title>
   </head>
   <body>
@@ -31,8 +27,6 @@
             <p>Already Registered? <a href="/frontend/public/login.html">Login Here</a></p>
             <button id="register" name="register" value="register">Register</button>  
         </form>
-        
-   
     </section>
     
 </html>
